--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
 	<title>Promises Pattern</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=1274, user-scalable=no">
+	<meta name="viewport" content="width=1700, user-scalable=no">
 	<link rel="stylesheet" href="shower/themes/ribbon/styles/screen.css">
 	<link rel="stylesheet" href="shower/themes/ribbon/styles/print.css" media="print">
 	<!--
 		To apply styles to the certain slides
 		set slide ID to get needed elements
-		-->
+	-->
 	<style>
 		#Cover h2 {
 			margin:65px 0 0;
@@ -59,146 +59,36 @@ $.get('/categories', function (data) {
 		</code>
 		</pre>
 
-		<p class="note">It doesn't worth for small apps</p>
 	</div></section>
 	
-	<section class="slide"><div>
-		<h2>AMD (deps managing, r.js builder)</h2>
-		<img src='pictures/rjs.png'>
-
-		<p class="note">It doesn't worth for small apps</p>
+	<section class="slide cover"><div>
+		<img src="pictures/1.png" alt="">
 	</div></section>
 
-	<section class="slide"><div>
-		<h2>Directory structure ('type/name')</h2>
-		<pre>
-collections/<br>
-models/<br>
-views/<br>
-routers/<br>
-templates/<br>
-		</pre>
-
-		<p class="note"></p>
-
-	</div></section>
-	<section class="slide"><div>
-		<h2>Directory structure ('type/name')</h2>
-		<pre>
-views/<br>
-&nbsp;&nbsp;- products/<br>
-&nbsp;&nbsp;- categories/ [list.js, item.js]<br>
-templates/<br>
-&nbsp;&nbsp;- products-list.html<br>
-&nbsp;&nbsp;- products-item.html<br>
-&nbsp;&nbsp;- categories.html
-		</pre>
-
-		<p class="note">
-
-		</p>
-
-	</div></section>
-	<section class="slide"><div>
-		<h2>CoffeeScript</h2>
-		<img src='pictures/coffee.png'>
+	<section class="slide cover"><div>
+		<img src="pictures/2.png" alt="">
 	</div></section>
 
-	<section class="slide"><div>
-		<h2>Lint you Code</h2>
-		<ol>
-			<li>JSLint</li>
-			<li>JSHint</li>
-			<li>CSSLint</li>
-		</ol>
-
-		<p class="note"></p>
+	<section class="slide cover"><div>
+		<img src="pictures/3.png" alt="">
 	</div></section>
-
-	<section class="slide"><div>
-		<h2>Templates</h2>
-		<ol>
-			<li>"precompile" html source</li>
-			<li>update, don't rerender</li>
-		</ol>
-
-		<p class="note"></p>
+	
+	<section class="slide cover"><div>
+		<img src="pictures/4.png" alt="">
 	</div></section>
-
-
-	<section class="slide"><div>
-		<h2>Views</h2>
-		<ol>
-			<li>track subviews</li>
-			<li>use fetch; show preloaders (<a href="http://tbranyen.com/post/how-to-indicate-backbone-fetch-progress">source</a>)</li>
-			<li>manage views (LayoutManager, Marionette, BabySitter)</li>
-			<li>less dependencies, more events</li>
-		</ol>
-
-		<p class="note"></p>
+	
+	<section class="slide cover"><div>
+		<img src="pictures/5.png" alt="">
 	</div></section>
-	<section class="slide"><div>
-		<h2>Preloaders</h2>
-		<img src='pictures/fetch-pre.png'>
-		<p class="note"></p>
+	
+	<section class="slide cover"><div>
+		<img src="pictures/5.png" alt="">
 	</div></section>
-	<section class="slide"><div>
-		<h2>Preloaders</h2>
-		<img src='pictures/fetch-view.png'>
-		<p class="note"></p>
+	
+	<section class="slide cover"><div>
+		<img src="pictures/6.png" alt="">
 	</div></section>
-
-
-	<section class="slide"><div>
-		<h2>Events</h2>
-		<figure>
-			<blockquote>
-				<p>For example, to make a handy event dispatcher that can coordinate events among different areas of your application:<br> <code>var dispatcher = _.clone(Backbone.Events)</code></p>
-			</blockquote>
-			<figcaption>backbonejs.org</figcaption>
-		</figure>
-
-		<p class="note"></p>
-	</div></section>
-
-	<section class="slide"><div>
-		<h2>Zombies</h2>
-		<img src='pictures/zombies.jpg'>
-		<p class="note"></p>
-	</div></section>
-
-	<section class="slide"><div>
-		<h2>Anti patterns</h2>
-		<ol>
-			<li>no side effect on external DOM</li>
-			<li>don't add events through global $</li>
-		</ol>
-
-		<p class="note"></p>
-	</div></section>
-	<section class="slide"><div>
-		<h2>Plugins</h2>
-		<ol>
-			<li>Backbone Marionette
-			<li>Backbone Forms (+Twitter Bootstrap)
-			<li>Backbone LocalStorage
-			<li>Backbone Relational
-		</ol>
-
-		<p class="note"></p>
-	</div></section>
-	<section class="slide"><div>
-		<h2>Books</h2>
-		<ol>
-<li><a href='https://github.com/addyosmani/backbone-fundamentals'>Backbone Fundamentals</a> /by Addy Osmani
-<li><a href='http://singlepageappbook.com/'>Single page apps in depth</a> /by folks
-<li><a href='http://pragprog.com/book/wbdev/web-development-recipes'>Web Development Recipes</a> /by Brian Hogan
-<li><a href='http://addyosmani.com/blog/essentialjsdesignpatternsupdate1/'>Essential JavaScript Design Patterns</a> /by Addy Osmani
-		</ol>
-
-		<p class="note"></p>
-	</div></section>
--->
+	
 
 	<section class="slide"><div>
 		<h2>Promises</h2>
