--- a/index.html
+++ b/index.html
@@ -88,7 +88,18 @@ $.get('/categories', function (data) {
 	<section class="slide cover"><div>
 		<img src="pictures/6.png" alt="">
 	</div></section>
+
 	
+	
+	<section class="slide cover"><div>
+		<h2>Links</h2>
+		<ol>
+			<li><a href='http://blogs.msdn.com/b/ie/archive/2011/09/11/asynchronous-programming-in-javascript-with-promises.aspx'>Asynchronous Programming in JavaScript with “Promises”</a></li>
+			<li><a href='http://wiki.commonjs.org/wiki/Promises/A'>Wiki Promises/A</a></li>
+		</ol>
+	</div></section>
+
+
 
 	<section class="slide"><div>
 		<h2>Promises</h2>
